--- a/influxdb/values.yaml
+++ b/influxdb/values.yaml
@@ -10,7 +10,8 @@ image:
 ## ref: http://kubernetes.io/docs/user-guide/services/
 ##
 service:
-  type: NodePort
+  #type: NodePort # Minikube
+  type: LoadBalancer # Any Public Cloud
 
 ## Persist data to a persitent volume
 ##
