--- a/kapacitor/values.yaml
+++ b/kapacitor/values.yaml
@@ -10,7 +10,9 @@ image:
 ## ref: http://kubernetes.io/docs/user-guide/services/
 ##
 service:
-  type: NodePort
+  type: NodePort # Minikube
+  #type: LoadBalancer # Any Public Cloud
+
 
 ## Persist data to a persitent volume
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
@@ -53,5 +55,4 @@ affinity: {}
 ## Set the URL of InfluxDB instance to create subscription on
 ## ref: https://docs.influxdata.com/kapacitor/v1.5/introduction/getting_started/
 ##
-#influxURL: http://data-influxdb.tick:8086
-influxURL: http://192.168.99.100:30080
+influxURL: http://data-influxdb.tick:8086
