--- a/telegraf-s/values.yaml
+++ b/telegraf-s/values.yaml
@@ -37,7 +37,9 @@ affinity: {}
 ## ref: http://kubernetes.io/docs/user-guide/services/
 service:
   enabled: true
-  type: NodePort
+  type: NodePort # Minikube
+  #type: LoadBalancer # Any Public Cloud
+
 
 ## Exposed telegraf configuration
 ## For full list of possible values see `/docs/all-config-values.yaml` and `/docs/all-config-values.toml`
