--- a/influxdb/values.yaml
+++ b/influxdb/values.yaml
@@ -10,9 +10,8 @@ image:
 ## ref: http://kubernetes.io/docs/user-guide/services/
 ##
 service:
-  #type: NodePort # Minikube
-  type: LoadBalancer # Any Public Cloud
-
+  type: LoadBalancer
+  
 ## Persist data to a persitent volume
 ##
 persistence:
