--- a/telegraf-s/values.yaml
+++ b/telegraf-s/values.yaml
@@ -37,10 +37,8 @@ affinity: {}
 ## ref: http://kubernetes.io/docs/user-guide/services/
 service:
   enabled: true
-  #type: NodePort # Minikube
-  type: LoadBalancer # Any Public Cloud
-
-
+  type: LoadBalancer
+  
 ## Exposed telegraf configuration
 ## For full list of possible values see `/docs/all-config-values.yaml` and `/docs/all-config-values.toml`
 ## ref: https://docs.influxdata.com/telegraf/v1.8/administration/configuration/
@@ -203,7 +201,7 @@ config:
 ##      dovecot:
 ##        servers:
 ##          - "localhost:24242"
-##        type: "global"
+##        type: "global"          
 ##        filters:
 ##          - ""
 ##      elasticsearch:
@@ -237,7 +235,7 @@ config:
         timeout: "5s"
     - kapacitor:
         urls:
-          - "http://192.168.99.100:30081/debug/vars"
+          - "http://192.168.99.100:30081"
         timeout: "5s"
     - kapacitor:
         urls:
