--- a/telegraf-s/values.yaml
+++ b/telegraf-s/values.yaml
@@ -37,7 +37,7 @@ affinity: {}
 ## ref: http://kubernetes.io/docs/user-guide/services/
 service:
   enabled: true
-  type: LoadBalancer
+  type: NodePort
   
 ## Exposed telegraf configuration
 ## For full list of possible values see `/docs/all-config-values.yaml` and `/docs/all-config-values.toml`
@@ -64,7 +64,7 @@ config:
   outputs:
     - influxdb:
         urls:
-          - "http://192.168.99.100:30080"
+          - "http://192.168.99.100:30082"
         database: "telegraf"
 ##        retention_policy: ""
 ##        write_consistency: "any"
@@ -231,15 +231,15 @@ config:
 ##          - "http://myhaproxy.com:1936/haproxy?stats"
     - influxdb:
         urls:
-          - "http://192.168.99.100:30080/debug/vars"
+          - "http://192.168.99.100:30082/debug/vars"
         timeout: "5s"
     - kapacitor:
         urls:
-          - "http://192.168.99.100:30081"
+          - "http://192.168.99.100:30083"
         timeout: "5s"
     - kapacitor:
         urls:
-          - "http://192.168.99.100:30081/debug/vars"
+          - "http://192.168.99.100:30083/debug/vars"
         timeout: "5s"
 ##      lustre2:
 ##        ost_procfiles:
