Added the support for Openshift and GCP

--- a/telegraf-ds/values.yaml
+++ b/telegraf-ds/values.yaml
@@ -58,5 +58,42 @@ config:
           - "annotation.kubernetes.io/*"
     - prometheus:
         urls: ["http://tickstackcluster.com:30080/metrics","http://tickstackcluster.com:30081/metrics"]
-
+    - cpu:
+    - system:
+    - disk:
+    - diskio:
+    - mem:
+    - processes:
+    - net:
+    - swap:
+    - cloudwatch:
+        region: "us-east-1"
+        access_key: ""
+        secret_key: ""
+        period: "5m"
+        delay: "5m"
+        interval: "5m"
+        cache_ttl: "10m"
+        ratelimit: 10
+        namespace: "AWS/ELB"
+    - cloudwatch:
+        region: "us-east-1"
+        access_key: ""
+        secret_key: ""
+        period: "5m"
+        delay: "5m"
+        interval: "5m"
+        cache_ttl: "10m"
+        ratelimit: 10
+        namespace: "AWS/EC2"
+    - cloudwatch:
+        region: "us-east-1"
+        access_key: ""
+        secret_key: ""
+        period: "5m"
+        delay: "5m"
+        interval: "5m"
+        cache_ttl: "10m"
+        ratelimit: 10
+        namespace: "AWS/ELB"
   
